src/includes/styles/main.css
:root {
  /* system font stack */
  --ff-sans: system-ui, sans-serif;
  --ff-serif: Georgia, Times, serif;
  --ff-mono: Menlo, Consolas, monospace;
  /* color scheme */
  --theme: hsl(45, 90%, 52%);
  --light: hsl(225, 15%, 99%);
  --light-gray: hsl(225, 15%, 97%);
  --gray: hsl(225, 15%, 94%);
  --dark-gray: hsl(45, 15%, 27%);
  --dark: hsl(45, 15%, 18%);
  --opaque: hsla(0, 0%, 50%, 0.5);
  --opaquer: hsla(0, 0%, 70%, 0.1);
  /* UI parts */
  --shadow: 0px 2px 16px var(--opaquer);
  --border: 1px solid var(--opaque);
  --radius: 0.5rem;
  --filter: brightness(1);
}

@media (prefers-color-scheme: dark) {
  :root {
    --theme: hsl(45, 90%, 52%);
    --light: hsl(225, 15%, 22%);
    --light-gray: hsl(225, 15%, 17%);
    --gray: hsl(225, 15%, 13%);
    --dark-gray: hsl(45, 15%, 73%);
    --dark: hsl(45, 15%, 80%);
    --opaque: hsla(0, 0%, 50%, 0.5);
    --opaquer: hsla(0, 0%, 10%, 0.5);
    --shadow: 0px 2px 16px var(--opaquer);
    --border: 1px solid var(--opaque);
    --filter: brightness(0.9);
  }
}

/* dark light mode */
.scheme-dark {
  --theme: hsl(45, 90%, 52%);
  --light: hsl(225, 15%, 22%);
  --light-gray: hsl(225, 15%, 17%);
  --gray: hsl(225, 15%, 13%);
  --dark-gray: hsl(45, 15%, 73%);
  --dark: hsl(45, 15%, 80%);
  --opaque: hsla(0, 0%, 50%, 0.5);
  --opaquer: hsla(0, 0%, 10%, 0.5);
  --shadow: 0px 2px 16px var(--opaquer);
  --border: 1px solid var(--opaque);
  --filter: brightness(0.9);
}

.scheme-light {
  --theme: hsl(45, 90%, 52%);
  --light: hsl(225, 15%, 99%);
  --light-gray: hsl(225, 15%, 97%);
  --gray: hsl(225, 15%, 94%);
  --dark-gray: hsl(45, 15%, 27%);
  --dark: hsl(45, 15%, 18%);
  --opaque: hsla(0, 0%, 50%, 0.5);
  --opaquer: hsla(0, 0%, 70%, 0.1);
  --shadow: 0px 2px 16px var(--opaquer);
  --border: 1px solid var(--opaque);
  --filter: brightness(1);
}

* {
  box-sizing: border-box;
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
}

body {
  padding: 1.5rem 0;
  background: var(--gray);
  color: var(--dark);
  font-family: var(--ff-sans);
  line-height: 1.3;
  font-size: 18px;
  transition: 0.3s ease-out;
}
/* grid layout */
body.grid-layout {
  display: grid;
  grid-template-columns: 1fr min(64ch, 100%) 1fr;
  justify-content: center;
  gap: 1.5rem;
}
/* center everything in middle grid */
body > * {
  grid-column: 2;
}

main {
    min-height: 75vh;
}

/* navigation */
nav {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: flex-end;
}

nav a {
  text-decoration: none;
}

nav .btn {
  height: 2rem;
  margin-inline-start: 0.25rem;
  border: none;
}

.home {
  display: block;
  width: fit-content;
  flex-grow: 1;
  font-size: 1.4rem;
  line-height: 1;
  text-transform: lowercase;
}

.pages {
  background: var(--light-gray);
  border-radius: var(--radius);
  max-height: 32px;
  align-items: center;
}

.pages a {
  display: inline-flex;
  color: var(--dark);
  padding: 4.5px 1.5rem;
  border-radius: var(--radius);
  transition: 0.3s ease-out;
}

.pages a:not(:last-child) {
  margin-inline-end: 0.1rem;
}

.topNav [aria-current='page'],
.topNav button:hover,
.pages a:hover {
  color: var(--dark);
  background: var(--light);
  box-shadow: var(--shadow);
}

.pageNav {
  justify-content: space-between;
}

.previous-page {
  justify-self: left;
}

.next-page {
  justify-self: right;
}

/* type style  */
h1,
h2 {
  font-weight: bold;
  letter-spacing: 0.25px;
  text-decoration: none;
  margin-block-start: 0.25rem;
}

h1 {
  font-size: xxx-large;
  margin-block-end: 1rem;
}

h2 {
  font-size: xx-large;
  margin-block-end: 0.75rem;
}

h3 {
  font-size: x-large;
  margin-block-end: 0.5rem;
}

h4 {
  font-size: large;
  margin-block-end: 0.15rem;
}

header {
  margin-block-end: 0.75rem;
}

address,
time {
  display: inline;
  font-style: normal;
  font-size: smaller;
  color: var(--dark-gray);
}

p {
  margin-block-end: 1.25rem;
}

small {
  font-size: 0.9rem;
  color: var(--dark-gray);
}

li {
  padding-block-end: 1rem;
  line-height: 1.6;
}

blockquote {
  margin: 1rem 0;
  padding: 0 1rem;
  border-inline-start: 2px solid var(--theme);
}

footer {
  padding-block-end: 0.5rem;
  text-align: center;
}

hr {
  margin: 1.5rem 0;
  background: var(--opaque);
  border: none;
  height: 1px;
}

/* link styles */
a {
  color: currentColor;
  text-decoration: underline; 
  text-decoration-color: var(--theme);
}

article a,
a[href^="http://"],
a[href^="https://"],
a[rel='noreferrer'],
a[rel='noopener'] {
  text-decoration: underline; 
  text-decoration-color: var(--theme);
}
article a:hover,
a[href^="http://"]:hover,
a[href^="https://"]:hover,
a[rel='noreferrer']:hover,
a[rel='noopener']:hover {
  color: var(--theme);
}
a[href^="http://"]::after,
a[href^="https://"]::after,
a[rel='noreferrer']::after,
a[rel='noopener'] {
  content: '\2197\FE0E';
  color: var(--dark-gray);
}

img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  transition: 0.3s ease-out;
  filter: var(--filter);
  background-color: var(--light);
}

[disabled] {
    opacity: 0.25;
    cursor: not-allowed;
}

.center {
  display: flex;
  justify-content: center;
  padding: 1rem;
}

.card {
  margin: 1rem auto;
  padding: 1rem;
  background: var(--light-gray);
  border-radius: var(--radius);
}

/* svg logo / tint icon */
.icon {
  fill: currentColor;
  display: inline-block;
  vertical-align: top;
  height: 1.3rem; /* equal to line height */
}

.logo {
  display: inline-block;
  vertical-align: top;
  height: 1.5rem;
  margin-inline-end: 0.15rem;
}

.btn {
  display: inline-block;
  cursor: pointer;
  padding: 0.25rem 0.75rem;
  border: var(--border);
  border-radius: var(--radius);
  background: var(--light-gray);
  color: var(--dark);
  text-decoration: none;
}

.btn:hover {
  text-decoration: none;
  background: var(--light);
}

button:focus {
  outline: none;
  background: var(--light);
  box-shadow: 0 0 0 1px var(--light-gray);
}

input {
  appearance: none;
}

label {
  margin-inline-end: 1rem;
}

.read-more {
  border-color: var(--gray);
  width: fit-content;
}

.visually-hidden {
  position: absolute;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
  height: 1px;
  border: 0;
  padding: 0;
  clip: rect(0 0 0 0);
}

/* post grid styles */
.posts {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(276.5px, 1fr));
  grid-template-rows: repeat(2, 275px);
  gap: 1.5rem;
}

.post {
  background: var(--light-gray);
  border-radius: var(--radius);
  text-decoration: none;
  transition: 0.3s ease-out;
}

.post:hover {
  background: var(--light);
  transform: translateY(-0.5px);
  box-shadow: var(--shadow);
}

.post:hover img {
  filter: brightness(1.02);
}

.post-info {
  padding: 0.75rem 1rem;
  border-radius: 0 0 var(--radius) var(--radius);
}

.post-title {
  margin: 0;
  font-size: 125%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.post-image {
  object-fit: cover;
  width: 100%;
  height: 200px;
  margin-block-end: 0rem;
  border-radius: var(--radius) var(--radius) 0 0;
}

.featured-post {
  grid-column: 1/-1;
  display: grid;
  gap: 1.5rem;
  grid-template-columns: 1fr 1fr;
}

.featured-post img {
  object-fit: cover;
  width: 100%;
  height: 275px;
  border-radius: var(--radius) 0 0 var(--radius);
}

.featured-post .post-info {
  padding: 1.5rem 2rem 1.5rem 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.caption p {
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

